# rotato

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-entrypoint.sh  rotation_ssh_only.yaml
data/: cleanup.yaml  config.example.yaml  config.yaml  manifests.yaml
docs/: RUNBOOK.md  architecture.dot  control_view.dot
manifests/: README.md  build-job.yaml  cronjob.yaml  kustomization.yaml  node-fixer.yaml
scripts/: test_authentik_redis_stability.sh  test_hook.sh  update_authentik_admin.sh  update_authentik_redis_config.sh  update_postgres_user.sh  update_redis_acl.sh  validate_authentik_admin.sh
src/: lib.rs  main.rs
src/admin/: mod.rs
src/bw_cli/: mod.rs  resources.rs  session.rs
src/commands/: check.rs  find.rs  get_key.rs  list_collections.rs  list_groups.rs  mod.rs  scaffold.rs  setup.rs
src/commands/cleanup/: mod.rs  prune_config.rs  purge_vault.rs  types.rs
src/commands/create_items/: access.rs  builder.rs  existence.rs  mod.rs  process.rs  types.rs
src/commands/rotate/: authentik.rs  collections.rs  hooks.rs  item_ops.rs  kube.rs  lookup.rs  mod.rs  process.rs  types.rs  user.rs  utils.rs
src/crypto/: aes.rs  debug.rs  kdf.rs  mod.rs  rsa.rs
src/flows/: auth.rs
src/infra/: fs.rs  git.rs  k8s.rs  mod.rs  random.rs  ssh.rs
src/logic/: mod.rs  parsing.rs  policy.rs  resolution.rs
src/models/: authentik.rs  config.rs  k8s.rs  keys.rs  mod.rs  user.rs  vaultwarden_target.rs
src/vaultwarden/: auth.rs  client.rs  collections.rs  folders.rs  items.rs  mod.rs  models.rs
tests/: e2e_real.rs  hook_test_config.yaml
(+1 files in other folders)
